--- a/Tasks/Views/Shared/_Layout.cshtml
+++ b/Tasks/Views/Shared/_Layout.cshtml
@@ -65,7 +65,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/core")
+    @RenderSection("urls",false)
     @Html.ViewJavascriptResource()
-    @RenderSection("scripts", false)
+
 </body>
 </html>
