--- a/Tasks/Views/Tasks/Index.cshtml
+++ b/Tasks/Views/Tasks/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿@using Tasks.ViewModels.Tasks
 @model TasksViewModel
-    
+
 @{
     ViewBag.Heading = "Tasks";
+}
+
+@section urls{
+    <script>
+        var urlsPubsub = {
+            getAddTask: '@Url.Action("GetAsideAddTab", "Tasks")',
+            getEditTask: '@Url.Action("GetAsideEditTab", "Tasks")',
+            getTasksTable: '@Url.Action("GetTasksTable", "Tasks")',
+            saveTask: '@Url.Action("Create", "Tasks")'
+            }
+    </script>
 }
 
 <h1>@ViewBag.Heading</h1>
