--- a/Tasks/CSS/Global/content.css
+++ b/Tasks/CSS/Global/content.css
@@ -31,6 +31,7 @@
     --input-line-height: 40px;
     --datepicker-selected: var(--theme-blue-light);
     --datepicker-hover: var(--theme-green-light);
+    --selected: var(--theme-blue-light);
     /*Shadow*/
     --shadow-card: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     --shadow-side: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -154,8 +155,9 @@ button {
     flex-direction:row;
     border: 0;
 }
-    .input-container > .input-item {
-        flex: 1 1 100%;        
+    .input-container > .input-item,
+    .input-container > input {
+        flex: 1 1 100%;
         height: var(--input-line-height);
     }
     
@@ -244,9 +246,17 @@ Select {
         background: var(--datepicker-selected) !important;
     }
 
-.week-picker.hover a {
-    background: var(--datepicker-hover);
-}
+    .week-picker.hover a {
+        background: var(--datepicker-hover);
+    }
+
+    .date-picker.selected a {
+        background: var(--datepicker-selected) !important;
+    } 
+
+    .date-picker.hover a {
+        background: var(--datepicker-hover);
+    }
 
     .ui-datepicker-week-col {
         font-weight: bold !important;
