--- a/Tasks/Views/Tasks/_TasksTable.cshtml
+++ b/Tasks/Views/Tasks/_TasksTable.cshtml
@@ -5,7 +5,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
 
-            <table class="table table-striped table-hover ">
+            <table class="table">
                 <tbody id="taskResultsTableBody">
                 @foreach (TaskDto task in Model.TaskList)
                 {
