Started habits, projects

--- a/Tasks/Views/Shared/_Layout.cshtml
+++ b/Tasks/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
         <aside>
 
             <div class="aside-container">
-                @{ Html.RenderAction("GetDefaultAsideLayout"); }
+                @{ Html.RenderAction("GetAside"); }
             </div>
                 
         </aside>
