--- a/Tasks/CSS/Global/layout.css
+++ b/Tasks/CSS/Global/layout.css
@@ -48,6 +48,7 @@
     /*Aside*/
     --aside-bg-color: var(--theme-white);
     --aside-tab-inactive-bg-color: var(--theme-green-light);
+    --aside-tab-disabled-bg-color: var(--theme-grey);
     --aside-tab-active-bg-color: var(--theme-white);
     --aside-tab-hover-bg-color: var(--theme-green-dark);
     /*Article*/
@@ -370,28 +371,30 @@ aside {
                     color: var(--text-font);
                     cursor: pointer;
                     background: var(--aside-tab-inactive-bg-color);
+
                     /*Shadow middle height*/
                     -moz-box-shadow: var(--shadow-card);
                     -webkit-box-shadow: var(--shadow-card);
                     box-shadow: var(--shadow-card);
+
                     /*Rounded corners*/
                     -webkit-border-radius: 30px 0 0 15px;
                     border-radius: 30px 0 0 15px; /* future proofing */
                     -moz-border-radius: 15px 0 0 15px;
+
                     /*Transition*/
-                    -moz-transition: all .15s ease-in;
-                    -o-transition: all .15s ease-in;
-                    -webkit-transition: all .15s ease-in;
-                    transition: all .15s ease-in;
+                    -moz-transition: all 0s linear;
+                    -o-transition: all 0s linear;
+                    -webkit-transition: all 0s linear;
+                    transition: all 0s linear;
                 }
 
-                    aside > .aside-container > .aside-tabs > ul > li:not(.active):hover {
+                    aside > .aside-container > .aside-tabs > ul > li:not(.active):not(.disabled):hover {
                         background: var(--aside-tab-hover-bg-color);
-                        /*Transition*/
-                        -moz-transition: all 0s linear;
-                        -o-transition: all 0s linear;
-                        -webkit-transition: all 0s linear;
-                        transition: all 0s linear;
+                    }
+
+                    aside > .aside-container > .aside-tabs > ul > li.disabled {
+                        background: var(--aside-tab-disabled-bg-color);
                     }
 
                     aside > .aside-container > .aside-tabs > ul > li.active {
@@ -411,6 +414,8 @@ aside {
                         transition: all 0s linear;
                     }
 
+
+                    
 /*
 * ---------- Rotatables ----------
 */
