--- a/Tasks/Views/Projects/_ProjectsTable.cshtml
+++ b/Tasks/Views/Projects/_ProjectsTable.cshtml
@@ -4,26 +4,24 @@
 
 @foreach (ProjectDto project in Model.Projects)
 {
-    <div class="container-fluid">
-        <div class="panel panel-default">
-            <div class="panel-body">
+    <div class="project-container">
                 
-                <h1> @project.Id - @project.Description </h1>
+        <h1> @project.Id - @project.Description </h1>
 
-                <table class="table table-striped table-hover ">
-                    <tbody>  
-                        @foreach (ProjectItemDto item in project.Items)
-                        {
-                            <tr data-projectid=@item.Id>
-                                <td>@item.Id</td>
-                                <td>@item.Type</td>
-                                <td>@item.Description</td>                                
-                            </tr>
-                        }                        
-                    </tbody>
-                </table>
+        <table>
+            <tbody>  
+            @foreach (ProjectItemDto item in project.Items)
+            {
+                <tr data-projectid=@item.Id>
+                    <td>@item.Id</td>
+                    <td>@item.Type</td>
+                    <td>@item.Description</td>                                
+                </tr>
+            }                        
+            </tbody>
+        </table>
 
-            </div>
-        </div>
     </div>
+
+ 
 }
