--- a/Tasks/Views/Tasks/_AddTask.cshtml
+++ b/Tasks/Views/Tasks/_AddTask.cshtml
@@ -1,67 +1,63 @@
 ﻿@using System.Web.Mvc.Html
-@using Tasks.Models.DomainModels
 @model Tasks.ViewModels.Tasks.TaskEditViewModel
 
 
-<div id="addTask">
+<h4 class="modal-title">Add a task</h4>
 
-    <h4 class="modal-title">Add a task</h4>
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "Add_Form" }))
+{
+    @Html.AntiForgeryToken()
+        
+    @Html.HiddenFor(model => model.TimeFrameId, new{@id = "Add_TimeFrameId"})
+    @Html.HiddenFor(model => model.Date, new { @id = "Add_Date" })
 
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "addTaskForm" }))
-    {
-        @Html.AntiForgeryToken()
+    <h3>Description</h3>
+    @Html.TextBoxFor(model => model.Description, new { @id= "Add_Description" , @class = "form-control", PlaceHolder = "Task description" })
 
-        @Html.HiddenFor(model => model.TimeFrameId)
-        @Html.HiddenFor(model => model.Date)
+    <h3>Priority</h3>
+    @Html.DropDownListFor(model => model.PriorityId, Model.PriorityDropDownItems, new { @id = "Add_PriorityId" })
 
-        <h3>Description</h3>
-        @Html.TextBoxFor(model => model.Description, new { @class = "form-control", PlaceHolder = "Task description" })
+    <h3>Due date due</h3>
+    <div id="add-tabs">
 
-        <h3>Priority</h3>
-        @Html.DropDownListFor(model => model.PriorityId, Model.PriorityDropDownItems)
+        <ul>
+            <li><a href="#add-open">Open</a></li>
+            <li><a href="#add-day">Day</a></li>
+            <li><a href="#add-week">Week</a></li>
+            <li><a href="#add-month">Month</a></li>
+        </ul>
 
-        <h3>Due date due</h3>
-        <div id="timeframe-tabs">
+        <div id="add-day">
 
-            <ul>
-                <li><a href="#timeframe-open-container">Open</a></li>
-                <li><a href="#timeframe-day-container">Day</a></li>
-                <li><a href="#timeframe-week-container">Week</a></li>
-                <li><a href="#timeframe-month-container">Month</a></li>
-            </ul>
+            <h3>Due On the date...</h3>
 
-            <div id="timeframe-day-container">
-
-                <h3>Due On the date...</h3>
-
-                <div class="input-container">
-                    <input id="timeframe-date" placeholder="Choose date" />
-                </div>
-                <div class="input-container">
-                    <p>specify time?</p>
-                    @Html.CheckBoxFor(model => model.HasTime)
-                </div>
-                <div class="input-container">
-                    @Html.TextBoxFor(model => model.Time)
-                </div>
+            <div class="input-container">
+                <input class="timeframe-date" placeholder="Choose date" />
             </div>
-
-            <div id="timeframe-week-container">
-                <h3>Due in the week of...</h3>
-                <input id="timeframe-week" placeholder="Choose a week" />
+            <div class="input-container">
+                <p>specify time?</p>
+                @Html.CheckBoxFor(model => model.HasTime, new { @id = "Add_HasTime" })
             </div>
-
-            <div id="timeframe-month-container">
-                <h3>Due in the month of...</h3>
-                <input id="timeframe-month" placeholder="Choose a month" />
-            </div>
-
-            <div id="timeframe-open-container">
-                <h3>No due date</h3>
+            <div class="input-container">
+                @Html.TextBoxFor(model => model.Time, new { @id = "Add_Time" })
             </div>
 
         </div>
-        <button id="saveTask">Save Task</button>
-    }
 
-</div>
+        <div id="add-week">
+            <h3>Due in the week of...</h3>
+            <input class="timeframe-week" placeholder="Choose a week" />
+        </div>
+
+        <div id="add-month">
+            <h3>Due in the month of...</h3>
+            <input class="timeframe-month" placeholder="Choose a month" />
+        </div>
+
+        <div id="add-open">
+            <h3>No due date</h3>
+        </div>
+
+    </div>
+    <button id="addTask">Save Task</button>
+}
