--- a/Tasks/CSS/Controllers/Projects.css
+++ b/Tasks/CSS/Controllers/Projects.css
@@ -1,35 +1,31 @@
 ﻿#projectResultsTable {
     /*Grid container*/
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: [heading] 50px [plan] auto [end];
-    width: 100%;
-    height: 100%;
-    justify-items: stretch;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
     z-index: 20;
 }
     #projectResultsTable > .project-container {
-        /*Flex container*/
-        display: flex;
-        flex-direction: row;
-        /*Flex*/
-        -webkit-flex: 1 1 auto;
-        -ms-flex: 1 1 auto;
-        -o-flex: 1 1 auto;
-        flex: 1 1 auto;
-        /*Flex wrap*/
-        -moz-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        -o-flex-wrap: wrap;
-        -webkit-flex-wrap: wrap;
-        flex-wrap: wrap;
-        /*Justify content*/
-        -o-justify-content: flex-start;
-        -webkit-justify-content: flex-start;
-        justify-content: flex-start;
-        -moz-align-content: flex-start;
-        -o-align-content: flex-start;
-        -webkit-align-content: flex-start;
-        align-content: flex-start;
+        flex: 0 1 0;
+        min-width: 150px;
         z-index: 22;
+        
+        display: flex;
+        flex-direction: column;
+        -ms-align-items: stretch;
+        -o-align-items: stretch;
+        -webkit-align-items: stretch;
+        align-items: stretch;
     }
+
+    #projectResultsTable > .project-container table {
+        width: 100%;
+        }
+
+.projectRow {
+    margin: 0;
+    padding: 0;
+    height: auto;   
+    border: 1px solid black;
+}
