--- a/Tasks/Views/Projects/_ProjectsTable.cshtml
+++ b/Tasks/Views/Projects/_ProjectsTable.cshtml
@@ -2,26 +2,31 @@
 @using Tasks.ViewModels.Projects
 @model ProjectsViewModel
 
-@foreach (ProjectDto project in Model.Projects)
+@foreach (ProjectWithItemsDto project in Model.Projects)
 {
-    <div class="project-container">
-                
-        <h1> @project.Id - @project.Description </h1>
+    <div class="card project-container">
 
-        <table>
-            <tbody>  
-            @foreach (ProjectItemDto item in project.Items)
-            {
-                <tr data-projectid=@item.Id>
-                    <td>@item.Id</td>
-                    <td>@item.Type</td>
-                    <td>@item.Description</td>                                
-                </tr>
-            }                        
-            </tbody>
-        </table>
+        <div class="projectRow" >
+            <h3>@project.Description </h3>    
+        </div>                
+        
+        <div>
+            <table>
+                <tbody class="connectedSortable" data-projectId="@project.Id">  
+                
+                    <tr class="emptyTablePlaceholder"></tr>
+
+                    @foreach (ProjectItemDto item in project.Items)
+                    {
+                        <tr data-projectid=@item.Id>
+                            <td>@item.Id</td>
+                            <td>@item.Type</td>
+                            <td>@item.Description</td>                                
+                        </tr>
+                    }                        
+                </tbody>
+            </table>
+        </div>
 
     </div>
-
- 
 }
