--- a/Tasks/Views/Shared/_Menu.cshtml
+++ b/Tasks/Views/Shared/_Menu.cshtml
@@ -1,30 +1,38 @@
 ﻿
-    <ul>
-        <li><a href="#">Plan</a></li>
-        <li class="active">
-            <a href="#">                
-                @Html.ActionLink("Thoughts", "Index", "Thoughts")
-            </a>
-        </li>
-        <li>
-            <a href="#">                
-                @Html.ActionLink("Tasks", "Index", "Tasks")
-            </a>
-        </li>
-        <li>
-            <a href="#">                
-                @Html.ActionLink("Habits", "Index", "Habits")
-            </a>
-        </li>
-        <li>
-            <a href="#">                
-                @Html.ActionLink("Projects", "Index", "Projects")
-            </a>
-        </li>
-        <li>
-            <a href="#">                
-                @Html.ActionLink("PlanWeek", "Index", "PlanWeek")
-            </a>
-        </li>
-    </ul>
+<ul>
+    <li>vv Plan  vv</li>
+    <li>
+        <a href="#">
+            @Html.ActionLink("PlanWeek", "Index", "PlanWeek")
+        </a>
+    </li>
+
+    <li>vv Items vv</li>
+    <li class="active">
+        <a href="#">
+            @Html.ActionLink("Thoughts", "Index", "Thoughts")
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            @Html.ActionLink("Tasks", "Index", "Tasks")
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            @Html.ActionLink("Events", "Index", "CalendarEvents")
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            @Html.ActionLink("Habits", "Index", "Habits")
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            @Html.ActionLink("Projects", "Index", "Projects")
+        </a>
+    </li>
+
+</ul>
 
