--- a/Tasks/Views/Shared/_Menu.cshtml
+++ b/Tasks/Views/Shared/_Menu.cshtml
@@ -1,38 +1,38 @@
-﻿
-<ul>
-    <li>vv Plan  vv</li>
+﻿<ul>
     <li>
-        <a href="#">
-            @Html.ActionLink("PlanWeek", "Index", "PlanWeek")
+        <a href=" @Url.Action("Index", "PlanWeek") ">
+            <img src="~/Images/SVG/planWeek.svg" />
+            <span>Plan Week</span>
         </a>
     </li>
-
-    <li>vv Items vv</li>
     <li class="active">
-        <a href="#">
-            @Html.ActionLink("Thoughts", "Index", "Thoughts")
+        <a href=" @Url.Action("Index", "Thoughts") ">
+            <img src="~/Images/SVG/thoughts.svg" />
+            <span>Thoughts</span>
         </a>
     </li>
     <li>
-        <a href="#">
-            @Html.ActionLink("Tasks", "Index", "Tasks")
+        <a href=" @Url.Action("Index", "Tasks") ">
+            <img src="~/Images/SVG/tasks.svg" />
+            <span>Tasks</span>
         </a>
     </li>
     <li>
-        <a href="#">
-            @Html.ActionLink("Events", "Index", "CalendarEvents")
+        <a href=" @Url.Action("Index", "CalendarEvents") ">
+            <img src="~/Images/SVG/calendarEvents.svg" />
+            <span>Events</span>
         </a>
     </li>
     <li>
-        <a href="#">
-            @Html.ActionLink("Habits", "Index", "Habits")
+        <a href=" @Url.Action("Index", "Habits") ">
+            <img src="~/Images/SVG/habits.svg" />
+            <span>Habits</span>
         </a>
     </li>
     <li>
-        <a href="#">
-            @Html.ActionLink("Projects", "Index", "Projects")
+        <a href=" @Url.Action("Index", "Projects") ">
+            <img src="~/Images/SVG/projects.svg" />
+            <span>Projects</span>
         </a>
     </li>
-
 </ul>
-
