--- a/Tasks/Views/Thoughts/Index.cshtml
+++ b/Tasks/Views/Thoughts/Index.cshtml
@@ -9,7 +9,7 @@
 <!--Heading-->
 <h1>@ViewBag.Heading</h1>
 
-@Html.Partial("_AddThought", Model.NewThought)
+@Html.Partial("_AddThought", Model.EditThought)
 <br />
 <!--Table of Tasks-->
 <div id="thoughtResultsTable">
