--- a/Tasks/Views/Thoughts/_AddThought.cshtml
+++ b/Tasks/Views/Thoughts/_AddThought.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.UI.WebControls
-@model Tasks.ViewModels.Thoughts.AddThoughtViewModel
+@model Tasks.ViewModels.Thoughts.ThoughtEditViewModel
 
 
 <div class="card">
